--- a/Sly1Decomp/src/CMakeLists.txt
+++ b/Sly1Decomp/src/CMakeLists.txt
@@ -8,9 +8,9 @@ set (FILES
 	# ...
 )
 
-add_library(DECOMP ${FILES})
+add_library(DECOMP ${FILES} "Difficulty/difficulty.cpp" "Difficulty/difficulty.h")
 target_include_directories(DECOMP PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_executable(test main.cpp)
+add_executable(test main.cpp "Difficulty/difficulty.cpp" "Difficulty/difficulty.h")
 
 target_link_libraries(test PUBLIC DECOMP)
