--- a/Sly1Decomp/src/CMakeLists.txt
+++ b/Sly1Decomp/src/CMakeLists.txt
@@ -1,16 +1,20 @@
 
 
 set (FILES
+	Util/util.cpp
+
 	Cheats/cheats.cpp
 
 	Savegame/savegame.cpp
 
+	Difficulty/difficulty.cpp
+
 	# ...
 )
 
-add_library(DECOMP ${FILES} "Difficulty/difficulty.cpp" "Difficulty/difficulty.h" "Util/util.cpp" "Util/util.h")
+add_library(DECOMP ${FILES})
 target_include_directories(DECOMP PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_executable(test main.cpp "Difficulty/difficulty.cpp" "Difficulty/difficulty.h" "Util/util.cpp" "Util/util.h")
+add_executable(test main.cpp)
 
 target_link_libraries(test PUBLIC DECOMP)
