--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,9 +8,9 @@ set (FILES
 	# ...
 )
 
-add_library(DECOMP ${FILES})
+add_library(DECOMP SHARED ${FILES})
 target_include_directories(DECOMP PUBLIC ${SLY1_INCLUDE_DIR})
 
-add_executable(test main.cpp)
+add_executable(main main.cpp)
 
-target_link_libraries(test PUBLIC DECOMP)
+target_link_libraries(main PUBLIC DECOMP)
