Tweaked cheats tests

--- a/test/cheats/CMakeLists.txt
+++ b/test/cheats/CMakeLists.txt
@@ -1,2 +1,5 @@
 
-add_unit_test(PARALLEL TRUE NAME difftestexample SOURCES test.cpp LIBS DECOMP)
+add_unit_test(PARALLEL TRUE
+	NAME cheatstest
+	SOURCES test.cpp
+	LIBS DECOMP)
