Added xform tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory(cheats)
 add_subdirectory(coin)
 add_subdirectory(difficulty)
 add_subdirectory(game)
+add_subdirectory(xform)
 
 #...
 
