added, changed, and renamed tests

--- a/test/cheats/CMakeLists.txt
+++ b/test/cheats/CMakeLists.txt
@@ -1,5 +1,2 @@
 
-add_unit_test(PARALLEL TRUE
-	NAME cheatsTest
-	SOURCES test.cpp
-	LIBS DECOMP)
+add_unit_test(PARALLEL TRUE NAME cheats_chetkido_test SOURCES chetkidotest.cpp LIBS DECOMP)
