--- a/test/difficulty/CMakeLists.txt
+++ b/test/difficulty/CMakeLists.txt
@@ -1,5 +1,2 @@
 
- add_unit_test(PARALLEL TRUE
-	NAME difficultyTest
-	SOURCES test.cpp
-	LIBS DECOMP)
+add_unit_test(PARALLEL TRUE NAME difficulty_test SOURCES difficultytest.cpp LIBS DECOMP)
