--- a/test/game/CMakeLists.txt
+++ b/test/game/CMakeLists.txt
@@ -1,5 +1,4 @@
 
-add_unit_test(PARALLEL TRUE
-	NAME gameTest
-	SOURCES test.cpp
-	LIBS DECOMP)
+add_unit_test(PARALLEL TRUE NAME game_coin_test SOURCES cointest.cpp LIBS DECOMP)
+
+add_unit_test(PARALLEL TRUE NAME game_charm_test SOURCES charmtest.cpp LIBS DECOMP)
