--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,7 +6,7 @@ add_subdirectory(coin)
 add_subdirectory(difficulty)
 add_subdirectory(game)
 add_subdirectory(xform)
-add_subdirectory(savegame)
+add_subdirectory(gs)
 
 #...
 
