split and tweaked difficulty tests

--- a/test/difficulty/CMakeLists.txt
+++ b/test/difficulty/CMakeLists.txt
@@ -1,2 +1,3 @@
 
-add_unit_test(PARALLEL TRUE NAME difficulty_test SOURCES difficultytest.cpp LIBS DECOMP)
+add_unit_test(PARALLEL TRUE NAME difficulty_suck_test SOURCES sucktest.cpp LIBS DECOMP)
+add_unit_test(PARALLEL TRUE NAME difficulty_world_load_test SOURCES worldloadtest.cpp LIBS DECOMP)
