--- a/test/difficulty/CMakeLists.txt
+++ b/test/difficulty/CMakeLists.txt
@@ -1,3 +1,3 @@
 
-add_unit_test(PARALLEL TRUE NAME difficulty_suck_test SOURCES sucktest.cpp LIBS DECOMP)
-add_unit_test(PARALLEL TRUE NAME difficulty_world_load_test SOURCES worldloadtest.cpp LIBS DECOMP)
+add_unit_test(PARALLEL TRUE NAME difficulty.suck SOURCES sucktest.cpp LIBS DECOMP)
+add_unit_test(PARALLEL TRUE NAME difficulty.world_load SOURCES worldloadtest.cpp LIBS DECOMP)
