--- a/test/game/CMakeLists.txt
+++ b/test/game/CMakeLists.txt
@@ -1,3 +1,4 @@
 
-add_unit_test(PARALLEL TRUE NAME game_coin_test SOURCES cointest.cpp LIBS DECOMP)
-add_unit_test(PARALLEL TRUE NAME game_charm_test SOURCES charmtest.cpp LIBS DECOMP)
+add_unit_test(PARALLEL TRUE NAME game.coin_count SOURCES coincounttest.cpp LIBS DECOMP)
+add_unit_test(PARALLEL TRUE NAME game.charm_count SOURCES charmcounttest.cpp LIBS DECOMP)
+add_unit_test(PARALLEL TRUE NAME game.charm_available SOURCES charmavailabletest.cpp LIBS DECOMP)
