--- a/test/joy/CMakeLists.txt
+++ b/test/joy/CMakeLists.txt
@@ -1,3 +1,3 @@
 
-add_unit_test(PARALLEL TRUE NAME joy_chetkido_test SOURCES chetkidotest.cpp LIBS DECOMP)
-add_unit_test(PARALLEL TRUE NAME joy_addfcht_test SOURCES addfchttest.cpp LIBS DECOMP)
+add_unit_test(PARALLEL TRUE NAME joy.chetkido SOURCES chetkidotest.cpp LIBS DECOMP)
+add_unit_test(PARALLEL TRUE NAME joy.addfcht SOURCES addfchttest.cpp LIBS DECOMP)
