added unti tests for util

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,12 +1,13 @@
 
 include (${CMAKE_CURRENT_SOURCE_DIR}/AddUnitTest.cmake)
 
-add_subdirectory(joy)
 add_subdirectory(coin)
 add_subdirectory(difficulty)
 add_subdirectory(game)
-add_subdirectory(xform)
 add_subdirectory(gs)
+add_subdirectory(joy)
+add_subdirectory(util)
+add_subdirectory(xform)
 
 #...
 
