Tests: Fix bugs. TestImpl: Formatting

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,8 @@
 
 include (${CMAKE_CURRENT_SOURCE_DIR}/AddUnitTest.cmake)
 
+set (TESTNAMES "")
+
 add_subdirectory(coin)
 add_subdirectory(difficulty)
 add_subdirectory(game)
@@ -11,7 +13,9 @@ add_subdirectory(xform)
 
 #...
 
+get_property(tests GLOBAL PROPERTY TESTNAMES)
+
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND}
-                        DEPENDS ${TESTNAMES})
+                        DEPENDS ${tests})
 		
 # now make check should work for unix systems
