renamed test files

--- a/test/gs/CMakeLists.txt
+++ b/test/gs/CMakeLists.txt
@@ -1,2 +1,2 @@
 
-add_unit_test(PARALLEL TRUE NAME gs.percent_completion SOURCES percenttest.cpp LIBS DECOMP)
+add_unit_test(PARALLEL TRUE NAME gs.calculate_gs_percent SOURCES calculate_gs_percent.cpp LIBS DECOMP)
