--- a/test/game/CMakeLists.txt
+++ b/test/game/CMakeLists.txt
@@ -1,4 +1,4 @@
 
-add_unit_test(PARALLEL TRUE NAME game.coin_count SOURCES coincounttest.cpp LIBS DECOMP)
-add_unit_test(PARALLEL TRUE NAME game.charm_count SOURCES charmcounttest.cpp LIBS DECOMP)
-add_unit_test(PARALLEL TRUE NAME game.charm_available SOURCES charmavailabletest.cpp LIBS DECOMP)
+add_unit_test(PARALLEL TRUE NAME game.set_coin_count SOURCES set_coin_count.cpp LIBS DECOMP)
+add_unit_test(PARALLEL TRUE NAME game.set_charm_count SOURCES set_charm_count.cpp LIBS DECOMP)
+add_unit_test(PARALLEL TRUE NAME game.charm_available SOURCES charm_available.cpp LIBS DECOMP)
