fixed the derefrencing in the bis classes and started working on the long complicated Execute function

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,9 +8,9 @@ set (FILES
 	# ...
 )
 
-add_library(DECOMP SHARED ${FILES})
+add_library(DECOMP SHARED ${FILES} "CTransition.cpp")
 target_include_directories(DECOMP PUBLIC ${SLY1_INCLUDE_DIR})
 
-add_executable(main main.cpp)
+add_executable(main main.cpp "CTransition.cpp")
 
 target_link_libraries(main PUBLIC DECOMP)
