Did more reversing of other classes and renamed a couple of class files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 
 set (FILES
-	CTransiton.cpp
+	Transition.cpp
 	util.cpp
 	joy.cpp
 	gs.cpp
@@ -12,10 +12,10 @@ set (FILES
 	# ...
 )
 
-add_library(DECOMP STATIC ${FILES}) # todo: use shared
+add_library(DECOMP STATIC ${FILES} "CTextBox.cpp") # todo: use shared
 
 target_include_directories(DECOMP PUBLIC ${SLY1_INCLUDE_DIR})
 
-add_executable(main main.cpp)
+add_executable(main main.cpp "CTextBox.cpp")
 
 target_link_libraries(main PUBLIC DECOMP)
