Finished the SetWipe and Activate Function and added  some structs for the joy.h

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,10 +11,13 @@ set (FILES
 	joy.cpp
 	mpeg.cpp
 	prog.cpp
+	sw.cpp
 	transition.cpp
 	util.cpp
+	wipe.cpp
+	wm.cpp
 	xform.cpp
-
+	zap.cpp
 	# ...
 )
 
