All of the wipe.c functions are completed

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,12 +19,12 @@ set (FILES
 	xform.cpp
 	zap.cpp
 	# ...
-)
+ "keyhole.cpp")
 
-add_library(DECOMP STATIC ${FILES}) # todo: use shared
+add_library(DECOMP STATIC ${FILES} "keyhole.cpp") # todo: use shared
 
 target_include_directories(DECOMP PUBLIC ${SLY1_INCLUDE_DIR})
 
-add_executable(main main.cpp)
+add_executable(main main.cpp "keyhole.cpp")
 
 target_link_libraries(main PUBLIC DECOMP)
