Attempt to fix test command and instructions

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,7 +16,7 @@ add_subdirectory(xform)
 
 get_property(tests GLOBAL PROPERTY TESTNAMES)
 
-add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND}
+add_custom_target(check COMMAND ctest -C Debug
                         DEPENDS ${tests})
 		
 # now make check should work for unix systems
