Tweaked project structure, fixed tests

--- a/test/coin/CMakeLists.txt
+++ b/test/coin/CMakeLists.txt
@@ -1,2 +1,2 @@
 
-add_unit_test(PARALLEL TRUE NAME coin.collect_coins SOURCES collect_coins.cpp LIBS DECOMP)
+add_unit_test(PARALLEL TRUE NAME coin.collect_coins SOURCES collect_coins.cpp LIBS ${P2_LIB_TARGET})
