--- a/test/clock/CMakeLists.txt
+++ b/test/clock/CMakeLists.txt
@@ -1,2 +1,2 @@
 
-add_unit_test(PARALLEL TRUE NAME clock.set_clock_rate SOURCES set_clock_rate.cpp LIBS DECOMP)
+add_unit_test(PARALLEL TRUE NAME clock.set_clock_rate SOURCES set_clock_rate.cpp LIBS ${P2_LIB_TARGET})
