--- a/test/xform/CMakeLists.txt
+++ b/test/xform/CMakeLists.txt
@@ -1,2 +1,2 @@
 
-add_unit_test(PARALLEL TRUE NAME xform.set_exits SOURCES set_exits.cpp LIBS DECOMP)
+add_unit_test(PARALLEL TRUE NAME xform.set_exits SOURCES set_exits.cpp LIBS ${P2_LIB_TARGET})
