--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,18 +3,17 @@ project(SCUS-97198)
 cmake_minimum_required(VERSION 3.12)
 set(CMAKE_CXX_STANDARD 20)
 
+set(ELF_TARGET SCUS_971.98)
 set(P2_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/P2)
-set(P2_LIB_TARGET P2)
-set(P2_ELF_TARGET SCUS_971.98)
-
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 add_subdirectory(src)
-target_include_directories(P2 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
+add_executable(${ELF_TARGET} ${P2_SOURCE_DIR}/main.cpp)
+target_link_libraries(${ELF_TARGET} PUBLIC P2)
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/tests)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/tests)
