Switch to minimal dark theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 remote_theme: "godalming123/minimal"
+color-scheme: "dark"
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
