--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ usr/
 sce/
 docs/
 
+# Startup scripts (so we don't accidentally push them with paths set)
+scripts/run.sh
+scripts/run.bat
+
 ## Binary/object products
 **/bin/
 **/obj/
