Cleanup and reorganization

--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,12 @@ docs/
 functions.txt
 
 # Splat files
+splat/
+assets/
+asm/
+c/
 undefined_funcs*.txt
 undefined_syms*.txt
-asm/
-assets/
-c/
 
 ## Binary/object products
 **/bin/
