--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -10,8 +10,8 @@ options:
   compiler: GCC
 
   asm_path: asm
-  src_path: c
-  build_path: build
+  src_path: src
+  build_path: bin
 
   find_file_boundaries: False
   disasm_unknown: True
@@ -153,7 +153,7 @@ segments:
     - [0x83c18, asm, P2/lo]
     - [0x84cc8, asm, P2/light]
     - [0x86358, asm, P2/lookat]
-    - [0x86758, asm, P2/main]
+    - [0x86758, c, P2/main]
     - [0x86c18, asm, P2/mark]
     - [0x894c0, asm, P2/mat]
 
@@ -243,7 +243,7 @@ segments:
     #- [0x, asm, P2/ub]
     #- [0x, asm, P2/ui]
     - [0xeac78, asm, P2/update]
-    - [0xeb408, c, P2/util]
+    - [0xeb408, asm, P2/util]
 
     - [0xec518, asm] #? unknown file
 
@@ -277,12 +277,12 @@ segments:
     #----------------------------------------
     # Rodata
     #----------------------------------------
-    - [0x118380, rodata]
+    #- [0x118380, rodata]
 
     #----------------------------------------
     # Data
     #----------------------------------------
-    - [0x151580, data]
+    #- [0x151580, data]
 
   - [0x17C200, databin]
   - [0x1A20D0]
