--- a/config/sly1.yaml
+++ b/config/sly1.yaml
@@ -23,7 +23,8 @@ options:
   create_undefined_syms_auto: True
   undefined_syms_auto_path: config/undefined_syms_auto.txt
 
-  symbol_addrs_path: config/symbol_addrs.txt
+  # Symbol addrs file generated using a ghidra script
+  #symbol_addrs_path: config/symbol_addrs.txt
 
   extensions_path: tools/splat_ext
 
@@ -69,14 +70,18 @@ segments:
     #----------------------------------------
     - [0x1dbb8, asm, P2/989snd]
     - [0x1f560, asm, P2/brx]
+
     - [0x1fe70, asm, P2/ac]
     #- [0x, asm, P2/act]
     #- [0x, asm, P2/actseg]
+
     - [0x243c0, asm, P2/alarm]
+
     - [0x24dc0, asm, P2/alo]
     #- [0x, asm, P2/aseg]
     #- [0x, asm, P2/asega]
     #- [0x, asm, P2/barrier]
+
     - [0x30cf0, asm, P2/bas]
     - [0x310e8, asm, P2/basic]
     - [0x31168, asm, P2/bez]
@@ -85,9 +90,11 @@ segments:
     - [0x395a0, asm, P2/bbmark]
     - [0x39ff0, asm, P2/blend]
     - [0x3ab70, asm, P2/blip]
+
     - [0x3c4c0, asm, P2/bomb]
     #- [0x, asm, P2/bone]
     #- [0x, asm, P2/bq]
+
     - [0x3dcf8, asm, P2/break]
 
     - [0x3efd8, asm] # TODO
@@ -105,18 +112,24 @@ segments:
     - [0x491A0, asm, P2/coin]
     - [0x4a398, asm, P2/cplcy]
     - [0x4bbd0, asm, P2/credit]
+
     - [0x4c0c0, asm, P2/crout]
     #- [0x, asm, P2/crusher]
+
     - [0x4e0a8, asm, P2/crv]
+
     - [0x4fe40, asm, P2/dart]
     #- [0x, asm, P2/dartgun]
     #- [0x, asm, P2/dialog]
+
     - [0x529e0, asm, P2/difficulty]
     - [0x53438, asm, P2/dl]
+
     - [0x53810, asm, P2/dmas]
     #- [0x, asm, P2/dsp]
     #- [0x, asm, P2/dysh]
     #- [0x, asm, P2/dzg]
+
     - [0x559c8, asm, P2/emitter]
     - [0x5a6e0, asm, P2/eyes]
     - [0x5aad0, asm, P2/fader]
@@ -131,29 +144,36 @@ segments:
     - [0x60678, asm, P2/freeze]
     - [0x60f88, asm, P2/frzg]
     - [0x61070, asm, P2/game]
+
     - [0x61e80, asm, P2/geom]
     #- [0x, asm, P2/gifs]
     #- [0x, asm, P2/glbs]
     #- [0x, asm, P2/glob]
     #- [0x, asm, P2/gomer]
+
     - [0x69130, asm, P2/gs]
+
     - [0x6ac58, asm, P2/hide]
     #- [0x, asm, P2/hnd]
     #- [0x, asm, P2/ik]
     #- [0x, asm, P2/jack]
     #- [0x, asm, P2/jlo]
+
     - [0x6f0b8, asm, P2/joy]
+
     - [0x70608, asm, P2/jt]
     #- [0x, asm, P2/jp]
     #- [0x, asm, P2/jsg]
+
     - [0x7e248, asm, P2/jump]
     #- [0x, asm, P2/keyhole]
     #- [0x, asm, P2/landing]
     #- [0x, asm, P2/lgn]
+
     - [0x83c18, asm, P2/lo]
     - [0x84cc8, asm, P2/light]
     - [0x86358, asm, P2/lookat]
-    - [0x86758, c, P2/main]
+    - [0x86758, asm, P2/main]
     - [0x86c18, asm, P2/mark]
     - [0x894c0, asm, P2/mat]
 
@@ -173,8 +193,10 @@ segments:
     - [0x917e0, asm, P2/path]
     - [0x92e70, asm, P2/phasemem]
     - [0x92ec0, asm, P2/pipe]
+
     - [0x93068, asm, P2/pnt]
     #- [0x, asm, P2/po]
+
     - [0x94210, asm, P2/prog]
 
     - [0x94598, asm] # TODO
@@ -187,23 +209,32 @@ segments:
     #- [0x, asm, P2/rchm]
 
     - [0x9e410, asm, P2/render]
+
     - [0x9f040, asm, P2/rip]
     #- [0x, asm, P2/rog]
     #- [0x, asm, P2/rope]
+
     - [0xa8b20, asm, P2/rumble]
+
     - [0xa8fe8, asm, P2/rwm]
     #- [0x, asm, P2/sampler] (might not be in release)
     #- [0x, asm, P2/sc]
+
     - [0xaac68, asm, P2/screen]
     #- [0x, asm, P2/sensor]
+
     - [0xb2ac8, asm, P2/shadow]
     #- [0x, asm, P2/shape]
+
     - [0xb3988, asm, P2/shd]
+
     - [0xb5920, asm, P2/shdanim]
     #- [0x, asm, P2/sky]
     #- [0x, asm, P2/slotheap]
+
     - [0xb6f50, asm, P2/sm]
     #- [0x, asm, P2/smartguard]
+
     - [0xb8968, asm, P2/so]
     - [0xbd760, asm, P2/solve]
     - [0xbf068, asm, P2/sort]
@@ -211,9 +242,11 @@ segments:
     - [0xc1f30, asm, P2/speaker]
     - [0xc2190, asm, P2/splicemap]
     - [0xc24c0, asm, P2/spliceobj]
+
     - [0xc3430, asm, P2/sprbuf]
     #- [0x, asm, P2/sqtr]
     #- [0x, asm, P2/squish]
+
     - [0xc5458, asm, P2/step]
     - [0xc6f18, asm, P2/stepact]
     - [0xc71e0, asm, P2/stepcane]
@@ -228,20 +261,26 @@ segments:
     - [0xd46f0, asm, P2/steprun]
     - [0xd5148, asm, P2/stepside]
     - [0xd5848, asm, P2/stepzap]
+
     - [0xd8120, asm, P2/stream]
     #- [0x, asm, P2/suv]
+
     - [0xdc480, asm, P2/sw]
     #- [0x, asm, P2/tail]
     #- [0x, asm, P2/tank]
     #- [0x, asm, P2/target]
+
     - [0xe18f8, asm, P2/text]
     #- [0x, asm, P2/thread]
     #- [0x, asm, P2/tn]
+
     - [0xe5e38, asm, P2/transition]
     - [0xe6378, asm, P2/turret]
+
     - [0xe6e70, asm, P2/tv]
     #- [0x, asm, P2/ub]
     #- [0x, asm, P2/ui]
+
     - [0xeac78, asm, P2/update]
     - [0xeb408, asm, P2/util]
 
